[tool.poetry]
name = "strawberry-demo"
version = "0.1.0"
description = ""
authors = ["craftsangjae <craftsangjae@gmail.com>"]
readme = "README.md"
packages = [{ include = "app.py" }]

[tool.poetry.dependencies]
python = "^3.12,<3.13"
streamlit = "^1.41.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
